app/assets/stylesheets/pageflow/timeline_page/timeline_item.scss
.timeline_item {
  $item-background-color: #1a171c;
  $item-width-small: 60%;
  $item-width-medium: 80%;
  $item-width-large: 100%;

  $thumbnail-ratio: 16 / 9;

  $menu-margin: 5px;

  list-style: none;

  .timeline_item-wrapper,
  .timeline_item_spacer {
    width: 49%;
    float: left;
    clear: left;
    position: relative;
  }

  .timeline_item-wrapper {
    margin-bottom: 1.5%;
  }

  &.right {
    .timeline_item-wrapper,
    .timeline_item_spacer {
      float: right;
      clear: right;
    }
  }

  .timeline_item_editor_menu {
    position: absolute;
    top: 0;
    right: $item-width-medium;
    margin-right: $menu-margin;
    visibility: hidden;
    opacity: 0;
    @include transition(opacity 0.2s ease 0.5s,
                        visibility 0.2s ease 0.5s);
  }

  &:hover .timeline_item_editor_menu {
    visibility: visible;
    opacity: 1;
    @include transition(opacity 0.2s ease,
                        visibility 0.2s ease);
  }

  &.right .timeline_item_editor_menu {
    left: $item-width-medium;
    right: auto;
    margin-left: $menu-margin;
  }

  &.small .timeline_item_editor_menu { right: $item-width-small; }
  &.large .timeline_item_editor_menu { right: $item-width-large; }
  &.right.small .timeline_item_editor_menu { left: $item-width-small; }
  &.right.large .timeline_item_editor_menu { left: $item-width-large; }

  a {
    width: $item-width-medium;
    display: block;
    float: right;
    background-color: $item-background-color;
    padding: 2px;
    color: #fff;
    text-decoration: none;
    font-size: 12px;
    font-weight: bold;
  }

  &.small {
    a {
      width: $item-width-small;
    }
  }

  &.large {
    a {
      width: $item-width-large;
    }
  }

  &.right {
    a {
      float: left;
    }
  }

  .timeline_item-caption {
    padding: 7px 10px;
    font-size: 15px;
    line-height: 21px;
  }

  .timeline_item-tagline {
    display: block;
    color: #48a2dc;
  }

  .page_thumbnail {
    padding-top: floor(percentage(1 / $thumbnail-ratio));
    background-size: 100% auto;
  }

  @include phone {
    .timeline_item_editor_menu {
      display: none;
    }

    .timeline_item-wrapper {
      float: none;
      width: 100%;
      margin-bottom: 2%;
    }

    .timeline_item_spacer {
      display: none;
    }

    a {
      float: none;
      width: $item-width-large;
    }
  }
}

